<resources>
    <string name="app_name">BookingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="paid_fragment_text">Подтверждение заказа №order_number может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
    <string name="info_reason_text">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="read_more_about_room">Подробнее о номере</string>
    <string name="peculiar_2">Peculiar 2</string>
    <string name="peculiar_1">Peculiar 1</string>
    <string name="room_hotel">Room Hotel</string>
    <string name="_175_000">175 000 ₽</string>
    <string name="_5_nights_with_flight">за 5 ночей с перелётом</string>
    <string name="choose_room">Выбрать номер</string>
    <string name="first_tourist">Первый турист</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="birth_date">Дата рождения</string>
    <string name="citizenship">Гражданство</string>
    <string name="passport_number">Номер загранпаспорта</string>
    <string name="passport_validation_date">Срок действия загранпаспорта</string>
    <string name="order_paid">Заказ оплачен</string>
    <string name="order_started_processing">Ваш заказ принят в работу</string>
    <string name="word_super">Супер!</string>
    <string name="red_square_moscow">Red Square, Moscow</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="_4_perfect">4 Отлично</string>
    <string name="_150_000">от 150 000 ₽</string>
    <string name="for_tour_with_flight">за тур с перелётом</string>
    <string name="about_hotel">Об отеле</string>
    <string name="peculiar_3">Peculiar 3</string>
    <string name="peculiar_4">Peculiar 4</string>
    <string name="hotel_description">Отель VIP-класса с собственными гольф полями. Высокий уровнь сервиса. Рекомендуем для респектабельного отдыха. Отель принимает гостей от 18 лет!</string>
    <string name="only_necessary">Самое необходимое</string>
    <string name="facilities">Удобства</string>
    <string name="what_includes">Что включено</string>
    <string name="what_not_includes">Что не включено</string>
    <string name="to_room_choose">К выбору номера</string>
    <string name="hotel_name_egypt">Лучший отель в Хургаде, Египет</string>
    <string name="departure_from">Вылет из</string>
    <string name="kaliningrad">Калининград</string>
    <string name="country_city">Страна, город</string>
    <string name="russia_moscow">Россия, Москва</string>
    <string name="dates">Даты</string>
    <string name="_19_09_2023_27_09_2023">19.09.2023 – 27.09.2023</string>
    <string name="nights_amount">Кол-во ночей</string>
    <string name="_5_nights">5 ночей</string>
    <string name="hotel">Отель</string>
    <string name="room">Номер</string>
    <string name="standart_with_sp">Стандартный с видом на бассейн и море</string>
    <string name="meal">Питание</string>
    <string name="breakfast">Завтрак</string>
    <string name="customer_info">Информация о покупателе</string>
    <string name="phone_number">Номер телефона</string>
    <string name="mail">Почта</string>
    <string name="add_tourist">Добавить Туриста</string>
    <string name="tour">Тур</string>
    <string name="_186_600">186 600 ₽</string>
    <string name="fuel_charge">Топливный сбор</string>
    <string name="_9_300">9 300 ₽</string>
    <string name="service_fee">Сервисный сбор</string>
    <string name="_2_136">2 136 ₽</string>
    <string name="to_payment">К оплате</string>
    <string name="_198_036">198 036 ₽</string>
    <string name="pay_173_456">Оплатить 173 456 ₽</string>
    <string name="write_name">Необходимо ввести имя</string>
    <string name="write_surname">Необходимо ввести фамилию</string>
    <string name="write_citizenship">Необходимо ввести гражданство</string>
    <string name="write_passport_number">Введите корректный номер паспорта</string>
    <string name="phone_number_incorrect">Номер телефона введён некорректно</string>
    <string name="email_incorrect">Почта введена некорректно</string>
    <string name="write_birth_date">Введите дату рождения</string>
    <string name="write_passport_expire_date">Введите срок действия загранпаспорта</string>
    <string name="hotel_room_pictures">Изображения номера</string>
    <string name="booking_text">Бронирование</string>

</resources>