<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@drawable/basic_layout_background"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/image_slider_room_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager_room"
            android:layout_width="match_parent"
            android:layout_height="257dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/image_placeholder"
            android:contentDescription="@string/hotel_room_pictures"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/dots_indicator_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/dots_grey_background"
            android:paddingVertical="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:dotsColor="@color/black_transparent_dots"
            app:dotsCornerRadius="7dp"
            app:dotsSize="7dp"
            app:dotsSpacing="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:progressMode="true"
            app:selectedDotColor="@color/black_selected_dot" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/room_hotel"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/rooms_peculiarities_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/peculiar_item_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/peculiarities_background"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/peculiar_1"
            android:textColor="@color/grey_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/peculiar_item_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/peculiarities_background"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/peculiar_2"
            android:textColor="@color/grey_text"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/see_more_about_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/additional_room_info_background"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/see_more_about_room_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:paddingStart="10dp"
            android:text="@string/read_more_about_room"
            android:textColor="@color/blue_button"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/see_more_about_room_arrow_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:paddingVertical="5dp"
            app:srcCompat="@drawable/arrow_right_blue" />

    </LinearLayout>

    <TextView
        android:id="@+id/room_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/_175_000"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_for_tour_with_flight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="3dp"
        android:text="@string/_5_nights_with_flight"
        android:textColor="@color/grey_text"
        android:textSize="16sp" />

    <Button
        android:id="@+id/choose_room_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/image_placeholder"
        android:text="@string/choose_room"
        android:textSize="16sp" />

</LinearLayout>